--- a/register-service.properties
+++ b/register-service.properties
@@ -2,3 +2,12 @@ login.service.name=login-service
 
 #Logging properties
 logging.file=C:/Personal/Study/Logs/register-service/default/error.log
+
+#Mysql properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost/comparer?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.username=comparer
+spring.datasource.password=Welcome1
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
