--- a/login-service.properties
+++ b/login-service.properties
@@ -1,9 +1,18 @@
+#MySQL
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost/comparer?createDatabaseIfNotExist=true&useSSL=true
+#spring.datasource.username=comparer
+#spring.datasource.password=Welcome1
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/comparer?createDatabaseIfNotExist=true&useSSL=true
-spring.datasource.username=comparer
-spring.datasource.password=Welcome1
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:comparer}?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${RDS_USERNAME:comparer}
+spring.datasource.password=${RDS_PASSWORD:Welcome1}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #Logging properties
