Changed database name

--- a/login-service.properties
+++ b/login-service.properties
@@ -9,9 +9,9 @@
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:comparer}?createDatabaseIfNotExist=true&useSSL=true
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:root}?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${RDS_USERNAME:comparer}
+spring.datasource.username=${RDS_USERNAME:root}
 spring.datasource.password=${RDS_PASSWORD:Welcome1}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
