--- a/register-service.properties
+++ b/register-service.properties
@@ -12,8 +12,11 @@ logging.file=C:/Personal/Study/Logs/register-service/default/error.log
 #spring.datasource.password=Welcome1
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+management.endpoints.web.exposure.include=hystrix.stream
+#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:root}?createDatabaseIfNotExist=true&useSSL=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${RDS_USERNAME:root}
