added rabbit mmq peoperty

--- a/login-service-dev.properties
+++ b/login-service-dev.properties
@@ -8,3 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #Logging properties
 logging.file=C:/Personal/Study/Logs/login-service/dev/error.log
+
+rabbitmq.queueName=comparer.queue
+rabbitmq.exchangeName=comparer-exchange
+rabbitmq.routingKey=comparer.routingkey
