--- a/login-service.properties
+++ b/login-service.properties
@@ -17,3 +17,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 #Logging properties
 logging.file=C:/Personal/Study/Logs/login-service/default/error.log
+
+#rabbit mq
+rabbitmq.queueName=comparer.queue
+rabbitmq.exchangeName=comparer-exchange
+rabbitmq.routingKey=comparer.routingkey
