--- a/login-service.properties
+++ b/login-service.properties
@@ -23,4 +23,4 @@ rabbitmq.queueName=comparer.queue
 rabbitmq.exchangeName=comparer-exchange
 rabbitmq.routingKey=comparer.routingkey
 
-test.properties=nitish
+test.properties=nitish srivastava
