--- a/register-service.properties
+++ b/register-service.properties
@@ -22,3 +22,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${RDS_USERNAME:root}
 spring.datasource.password=${RDS_PASSWORD:Welcome1}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+test.properties=nitish
