--- a/register-service.properties
+++ b/register-service.properties
@@ -23,4 +23,4 @@ spring.datasource.username=${RDS_USERNAME:root}
 spring.datasource.password=${RDS_PASSWORD:Welcome1}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-test.properties=nitish
+test.properties=nitish sri
